hphp/hack/test/typecheck/sealed/method_experimental_01.php
<?hh

class C {
  <<__Sealed(D::class)>>
  public function foo(): void {}
}

class D {}
